--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8"
+    "@adonisjs/shield": "^1.0.8",
+    "sqlite3": "^4.1.1",
+    "twilio": "^3.42.1"
   },
   "devDependencies": {
     "@adonisjs/cli": "^4.0.12",
