--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/persona": "^1.0.5",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "@adonisjs/validator": "^5.0.6",
     "@adonisjs/websocket": "^1.0.12",
     "sqlite3": "^4.1.1",
     "twilio": "^3.42.1"
