--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,21 @@ HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
-
 CACHE_VIEWS=false
-
 APP_KEY=
-
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_DATABASE=adonis
-
+DB_DATABASE=ineedhelp
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
+
+TZ=UTC
+NUMBER_TO_CALL_DISPLAY=1 (555) 555-5555
+NUMBER_TO_CALL_ACTUAL=+15555555555
+WEBSOCKET_URL=ws://${HOST}:${PORT}
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PROXY_SERVICE_SID=
